--- a/index.css
+++ b/index.css
@@ -30,15 +30,12 @@ h1{
    font-weight: 900;
    letter-spacing: 2px;
    border-radius: 5px;
-   transition: transform 1000s ease-in-out;
+   background-color: tomato;
+   color: #fff;
+   border: 1px solid #000;
 }
 
-#start:hover,
-#start:focus{
-   background-color: rgb(192, 86, 53);
-   transform: scale(0.9);
-   color: #fff;
-}
+
 
 h2{
    margin: 15px;
@@ -62,7 +59,8 @@ h2{
 .square{
    width: 50px;
    height: 50px;
-   border-radius: 5px;
+   margin-left: 2px solid #000;
+   border-radius: 10px;
 }
 
 .snake{
